# ur5_core_pkg

./: CMakeLists.txt  README.md  package.xml
cfg/: UR5GUI.cfg
include/ur5_core_pkg/: UR5Core.h  UR5GUIConfig.h
src/: UR5Core.cpp  ur5_main.cpp
urdf/: simulation.ttt
